<resources>

    <string name="app_name">FinalApp</string>

    <string name="title">Let\'s calculate general taxes!</string>

    <string-array name="spinner">
        <item>Select your province/territory</item>
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
        <item>Yukon</item>
    </string-array>

    <string name="test">Go to the second activity</string>
    <string name="test_2">Go to the details activity</string>

    <string name="input">You have selected:  </string>
    <string name="pst">Provincial Sales Tax:</string>
    <string name="gst">Good and Services Tax:</string>
    <string name="hst">Harmonized Sales Tax:</string>
    <string name="pst_percent">PST (</string>
    <string name="gst_percent">GTS (</string>
    <string name="hst_percent">HST (</string>
    <string name="percent_plus_parenthesis">% )</string>

    <string name="total">TOTAL: C$</string>

    <string name="purpose">Purpose: </string>
    <string name="price">Price: </string>
    <string name="date">Date: </string>
    <string name="tag_or_ticket">Tag/Ticket: </string>
    <string name="snapshot">Snapshot: </string>
    <string name="delete">Delete</string>

    <string-array name="spinner2">
        <item>Select tag or ticket</item>
        <item>Tag</item>
        <item>Ticket</item>
    </string-array>
    
    <string name="date_picker_title">Date:</string>

    <string name="new_details">New Entry</string>
    <string name="show_subtitle">Show Entries</string>
    <string name="hide_subtitle">Hide Entries</string>

    <string name="no_items">No entries</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d entry</item>
        <item quantity="other">%1$d entries</item>
    </plurals>

    <string name="empty_crime_list_label">This screen is too lonely, why don\'t you add something?</string>

    <string name="edit_details">Edit Details</string>

</resources>