<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/purpose"
        android:textSize="16dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/purpose"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="50dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="110dp"
        android:text="@string/price"
        android:textSize="16dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/price"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="110dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="170dp"
        android:text="@string/date"
        android:textSize="16dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/date"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="170dp"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="230dp"
        android:text="@string/tag_or_ticket"
        android:textSize="16dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="290dp"
        android:text="@string/snapshot"
        android:textSize="16dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_pic"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="290dp"
        android:text="use camera icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>